--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,29 @@
 @tailwind utilities;
 
 @layer base {
-  html, body, #root{
+
+  html,
+  body,
+  #root {
     @apply h-full bg-zinc-50
+  }
+
+  .container {
+    width: 935px !important;
+    max-width: 100%;
+  }
+
+  #root {
+    @apply flex flex-col
+  }
+
+  #root .container {
+    @apply flex-1
+  }
+}
+
+@layer components {
+  .message-box > div{
+    @apply flex flex-col gap-y-2
   }
 }
